--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,7 +13,7 @@ body {
 .field__table {
   border: solid 1px #48a9e5;
 }
-.field__cell {
+td {
   width: 48px;
   height: 48px;
   background-color: #48a9e5;
@@ -28,6 +28,7 @@ body {
   font-family: FontAwesome;
   color: #fff;
   border: 0;
+  outline: none;
   transition: background-color 2s;
 }
 .field__button_remove {
