--- a/src/style/button.css
+++ b/src/style/button.css
@@ -1,4 +1,4 @@
-.field__button {
+.table__button {
     position: absolute;
     cursor: pointer;
     width: 48px;
@@ -9,41 +9,41 @@
     outline: none;
     transition: background-color 2s;
 }
-.field__button_remove {
+.table__button_remove {
     background-color: #b10000;
 }
-.field__button_remove:hover {
+.table__button_remove:hover {
     background-color: #c74b48;
 }
 
-.field__button_remove::before {
+.table__button_remove::before {
     content: '\f068';
 }
-.field__button_hidden {
+.table__button_hidden {
     visibility: hidden;
 }
-.field__button_add {
+.table__button_add {
     background-color: #f2a400;
 }
-.field__button_add::before {
+.table__button_add::before {
     content: '\f067';
 }
-.field__button_add:hover {
+.table__button_add:hover {
     background-color: #f4be52;
 }
-.field__button_remove-row {
+.table__button_remove-row {
     right: 100%;
-    margin: 1px 2px 0 0;
+    margin: 1px 3px 0 0;
 }
-.field__button_remove-col {
+.table__button_remove-col {
     bottom: 100%;
-    margin: 0 0 2px 1px;
+    margin: 0 0 3px 1px;
 }
-.field__button_add-row {
+.table__button_add-row {
     top: 100%;
-    margin: 2px 0 0 3px;
+    margin: 3px 0 0 3px;
 }
-.field__button_add-col {
+.table__button_add-col {
     left: 100%;
-    margin: 3px 0 0 2px;
+    margin: 3px 0 0 3px;
 }
