--- a/src/style/table.css
+++ b/src/style/table.css
@@ -1,3 +1,17 @@
-.field__table {
-    border: solid 1px #48a9e5;
+@import url(table.css);
+@import url(cell.css);
+@import url(button.css);
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
+.table {
+  position: relative;
+  margin: 100px;
+  display: inline-block;
+  border: 1px solid #48a9e5;
+}
+
+
+
