--- a/src/style/table.css
+++ b/src/style/table.css
@@ -1,6 +1,6 @@
-@import url(table.css);
-@import url(cell.css);
-@import url(button.css);
+
+/*@import url(Cell.css);*/
+/*@import url(Button.css);*/
 body {
   margin: 0;
   padding: 0;
